# reBERT

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  rebert_project_summary.md
docs/docs/: index.md
models/reBERT/: dataset.py  features.py  plots.py
models/reBERT/modeling/: train.py
reBERT/: __init__.py  base_model.py  dataset.py  features.py  minimal_model.py  minimal_model_test.py  plots.py  squad_test.py  squad_training.py
reBERT/components/: layers.py  layers_test.py
reBERT/modeling/: predict.py  train.py
reBERT/utilities/: dependency_test.py
src/: pyproject.toml
src/docs/: mkdocs.yml
src/models/reBERT/: __init__.py
src/models/reBERT/components/: layers.py
src/models/reBERT/modeling/: predict.py
src/models/reBERT/utilities/: dependency_test.py
src/notebooks/: 01-initial-testing.ipynb  02-modernbert_testing_notebook.ipynb  modernbert_baseline_results.json
